--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@babel/polyfill": "^7.0.0-rc.1",
     "apollo-boost": "^0.1.22",
     "graphql": "^14.0.2",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.23.0",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.26",
